edited some copy.

--- a/public/hi/index.html
+++ b/public/hi/index.html
@@ -34,7 +34,7 @@
 			<h2>Hi!</h2>
 		</header>
 	
-	<p>Ethan Turkeltaub is a Farmington, Connecticut-based sixteen-year-old student and web developer at <a href="http://fanzter.com">Fanzter</a>.</p>
+	<p>Ethan Turkeltaub is a Farmington, Connecticut-based sixteen-year-old student and web developer at <a href="http://fanzter.com">Fanzter</a>. I&#8217;ve been making websites since I was nine-years-old, and I&#8217;m now a professional web developer. Want to hire me? Talk to me <a href="http://twitter.com/ethnt">on Twitter</a> or use good old-fashioned <a href="mailto:ethan.turkeltaub@gmail.com">electronic mail</a>.</p>
 
 	<footer>
 		
