--- a/public/index.html
+++ b/public/index.html
@@ -232,11 +232,17 @@
 </section>
 <footer>
 	<nav>
-		<ul>
-			<li id="previous"><a href="/page/2/">&larr; Older</a></li>
-			<li id="number">1 <span>of</span> 11</li>
+		<section id="older">
 			
-		</ul>
+				<span><a href="/page/2/">&larr; Older</a></span>
+			
+		</section>
+		<section id="number">
+			<p>1 <span>of</span> 11</p>
+		</section>
+		<section id="newer">
+			
+		</section>
 	</nav>
 </footer>
 			</div>
