--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 </p>
 			
 	</header>
-	<p>PBS&#8217;s web series <a href="http://www.youtube.com/user/PBSoffbook">Off Book</a> has just came out with a new episode, this time called <em>The Art of Web Design</em>. Featuring <a href="http://zeldman.com">Jeffery Zeldman</a>, <a href="http://jasonsantamaria.com">Jason Santa Maria</a>, and <a href="http://whitneyhess.com">Whitney Hess</a>, it gives an excellent insight into the world and history of web design. It&#8217;s well worth a watch if you&#8217;re not that familiar with professional web design.</p>
+	<p>PBS&#8217;s web series <a href="http://www.youtube.com/user/PBSoffbook">Off Book</a> has just came out with a new mini documentary, <em>The Art of Web Design</em>. Featuring <a href="http://zeldman.com">Jeffery Zeldman</a>, <a href="http://jasonsantamaria.com">Jason Santa Maria</a>, and <a href="http://whitneyhess.com">Whitney Hess</a>, it gives an excellent insight into the world and history of web design. It&#8217;s well worth a watch if you&#8217;re not that familiar with professional web design.</p>
 
 	<footer>
 		<p>
