fixed link to noted.

--- a/public/hi/index.html
+++ b/public/hi/index.html
@@ -34,7 +34,7 @@
 			<h2>Hi!</h2>
 		</header>
 	
-	<p>Well, hello there. I&#8217;m Ethan Turkeltaub, and I&#8217;m a seventeen-year-old student and web developer based out of Farmington, Connecticut. Right now, I&#8217;m working on a project called <a href="http://ethnt.github.com/noted">Noted</a>, but I can be available for freelance work. I&#8217;m on <a href="http://twitter.com/ethnt">Twitter</a>, <a href="http://github.com/ethnt">GitHub</a>, and <a href="http://dribbble.com/ethan">Dribbble</a>.</p>
+	<p>Well, hello there. I&#8217;m Ethan Turkeltaub, and I&#8217;m a seventeen-year-old student and web developer based out of Farmington, Connecticut. Right now, I&#8217;m working on a project called <a href="http://getnotedapp.com">Noted</a>, but I can be available for freelance work. I&#8217;m on <a href="http://twitter.com/ethnt">Twitter</a>, <a href="http://github.com/ethnt">GitHub</a>, and <a href="http://dribbble.com/ethan">Dribbble</a>.</p>
 
 	<footer>
 		
